--- a/backend/netlify.toml
+++ b/backend/netlify.toml
@@ -1,4 +1,10 @@
+[build]
+environment = { NODE_VERSION = "16.16.0" }
+  base = "./"
+  publish = "dist"
+  command = "npm run build"
+
 [[redirects]]
-from ="/*"
-to="/index.html"
-status =200
+  from = "/*"
+  to = "/index.html"
+  status = 200
